added yarn and eslint

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "truffle-init-webpack",
+  "name": "foodsafe",
   "version": "0.0.2",
-  "description": "Frontend example using truffle v3",
+  "description": "ETH foodsafe app",
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack",
     "dev": "webpack-dev-server"
   },
-  "author": "Douglas von Kohorn",
+  "author": "Javier Sanguinetti",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -36,5 +36,7 @@
   },
   "dependencies": {
     "solc": "^0.4.18"
-  }
+  },
+  "main": "index.html",
+  "repository": "git@github.com:jsanguinetti/foodsafe.git"
 }
